Fix dark mode display

--- a/themes/pixelswap-theme/assets/scss/main.scss
+++ b/themes/pixelswap-theme/assets/scss/main.scss
@@ -15,9 +15,6 @@ $darkMode: true;
 
 @mixin darkMode {
     @if ($darkMode) {
-        @media (prefers-color-scheme: dark) {
-            @content;
-        }
         html.dark & {
             @content;
         }
