--- a/themes/pixelswap-theme/assets/scss/style.scss
+++ b/themes/pixelswap-theme/assets/scss/style.scss
@@ -85,14 +85,20 @@ em {
     right: 30px;
     z-index: 9999;
     cursor: pointer;
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
     border: none;
+    background: #ddd;
+    text-align: center;
+
+    &:hover {
+        background: #ccc;
+    }
 
     @include darkMode {
         color: $dark-text-color;
-        background: #444;
+        background: #333;
 
         &:hover {
             background: #555;
@@ -100,7 +106,8 @@ em {
     }
 
     svg {
-        height: 20px;
+        margin: 0 auto;
+        height: 18px;
     }
 }
 
@@ -212,6 +219,11 @@ em {
         @include darkMode {
             color: #ddd;
             border: 2px solid #ddd;
+
+            &:hover {
+                color: #1abc9c;
+                border-color: #1abc9c;
+            }
         }
     }
 }
